--- a/Testing/packages.config
+++ b/Testing/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AlchemyAPIClient" version="1.5.1608.252" targetFramework="net451" />
+  <package id="asprise-ocr-api" version="15.3.1.0" targetFramework="net462" />
+  <package id="asprise-ocr-dll-bundle-32" version="15.3.1.0" targetFramework="net462" />
+  <package id="asprise-ocr-dll-bundle-64" version="15.3.1.0" targetFramework="net462" />
   <package id="Autofac" version="4.4.0" targetFramework="net462" />
   <package id="Dapper" version="1.50.2" targetFramework="net451" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
