--- a/Zbang.Cloudents.Jared/packages.config
+++ b/Zbang.Cloudents.Jared/packages.config
@@ -8,6 +8,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.7.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Tracing" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.Azure.Mobile.Server" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Azure.Mobile.Server.Authentication" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Azure.Mobile.Server.Home" version="2.0.0" targetFramework="net462" />
