--- a/Zbang.Cloudents.Jared/packages.config
+++ b/Zbang.Cloudents.Jared/packages.config
@@ -2,8 +2,11 @@
 <packages>
   <package id="Autofac" version="4.4.0" targetFramework="net462" />
   <package id="Autofac.Owin" version="4.0.0" targetFramework="net45" />
+  <package id="Autofac.SignalR" version="3.0.2" targetFramework="net462" />
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net462" />
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.1" targetFramework="net462" />
+  <package id="Microsoft.AspNet.SignalR.ServiceBus" version="2.2.1" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.7.0" targetFramework="net462" />
@@ -30,4 +33,5 @@
   <package id="Strathweb.CacheOutput.WebApi2" version="0.10.0" targetFramework="net462" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.4.403061554" targetFramework="net462" />
   <package id="System.Spatial" version="5.8.1" targetFramework="net462" />
+  <package id="WindowsAzure.ServiceBus" version="2.3.4.0" targetFramework="net462" />
 </packages>
