--- a/Zbang.Zbox.Infrastructure.Search/Zbang.Zbox.Infrastructure.Search.csproj
+++ b/Zbang.Zbox.Infrastructure.Search/Zbang.Zbox.Infrastructure.Search.csproj
@@ -73,6 +73,8 @@
     <Compile Include="BoxSearchProvider.cs" />
     <Compile Include="Content.cs" />
     <Compile Include="ContentSearchProvider.cs" />
+    <Compile Include="FeedSearch.cs" />
+    <Compile Include="FeedSearchProvider.cs" />
     <Compile Include="FilterProvider.cs" />
     <Compile Include="FlashcardSearch.cs" />
     <Compile Include="FlashcardSearchProvider.cs" />
@@ -89,7 +91,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuizSearch.cs" />
     <Compile Include="QuizSearchProvider2.cs" />
-    <Compile Include="RegisterIoc.cs" />
+    <Compile Include="SearchModule.cs" />
     <Compile Include="SeachConnection.cs" />
     <Compile Include="SearchIndex.cs" />
     <Compile Include="UniversitySearch.cs" />
