--- a/Zbang.Zbox.ViewModel/Zbang.Zbox.ViewModel.csproj
+++ b/Zbang.Zbox.ViewModel/Zbang.Zbox.ViewModel.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Dto\Emails\UserDigestDto.cs" />
     <Compile Include="Dto\ItemDtos\DiscussionDto.cs" />
     <Compile Include="Dto\ItemDtos\DocumentSearchDto.cs" />
+    <Compile Include="Dto\Qna\FeedToUpdateSearchDto.cs" />
     <Compile Include="Dto\ItemDtos\FileWithDetailDto.cs" />
     <Compile Include="Dto\ItemDtos\FlashcardDto.cs" />
     <Compile Include="Dto\ItemDtos\FlashcardSearchDto.cs" />
@@ -120,6 +121,7 @@
     <Compile Include="Dto\Library\UniversitySearchDto.cs" />
     <Compile Include="Dto\Library\UniversityWithCodeDto.cs" />
     <Compile Include="Dto\PagedDto.cs" />
+    <Compile Include="Dto\Qna\FeedSearchDto.cs" />
     <Compile Include="Dto\Qna\LikeDto.cs" />
     <Compile Include="Dto\Qna\ReplyDto.cs" />
     <Compile Include="Dto\Qna\ItemDto.cs" />
