--- a/Zbang.Zbox.Domain.CommandHandlersTests/Zbang.Zbox.Domain.CommandHandlersTests.csproj
+++ b/Zbang.Zbox.Domain.CommandHandlersTests/Zbang.Zbox.Domain.CommandHandlersTests.csproj
@@ -55,6 +55,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="GetGeneralDepartmentCommandHandlerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DeleteItemCommandHandlerTests.cs" />
     <Compile Include="SubscribeToSharedBoxCommandHandlerTests.cs" />
@@ -79,6 +80,10 @@
     <ProjectReference Include="..\Zbang.Zbox.DomainNew\Zbang.Zbox.Domain.csproj">
       <Project>{35dc2a36-5e24-4e09-8967-838c6edca465}</Project>
       <Name>Zbang.Zbox.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Zbang.Zbox.Infrastructure.Ioc\Zbang.Zbox.Infrastructure.Ioc.csproj">
+      <Project>{872878FA-A84A-4CD3-856A-4EE9018819C5}</Project>
+      <Name>Zbang.Zbox.Infrastructure.Ioc</Name>
     </ProjectReference>
     <ProjectReference Include="..\Zbang.Zbox.Infrastructure\Zbang.Zbox.Infrastructure.csproj">
       <Project>{3e0f1fbf-60d1-40b2-b649-933142c27cb7}</Project>
