--- a/Zbang.Zbox.Domain.CommandHandlersTests/packages.config
+++ b/Zbang.Zbox.Domain.CommandHandlersTests/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.4.0" targetFramework="net462" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net451" />
 </packages>
