--- a/Zbang.Cloudents.JaredTests3/app.config
+++ b/Zbang.Cloudents.JaredTests3/app.config
@@ -77,7 +77,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="ZBox" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ZBox;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
-    <!--<add name="ZBox" connectionString="Server=tcp:on0rodxe8f.database.windows.net;Database=ZboxNew;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;Trusted_Connection=False;Encrypt=True;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="ZBox" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ZBox;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />-->
+    <add name="ZBox" connectionString="Server=tcp:on0rodxe8f.database.windows.net;Database=ZboxNew;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;Trusted_Connection=False;Encrypt=True;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" /></startup></configuration>
