--- a/Zbang.Zbox.Infrastructure.Notification/Zbang.Zbox.Infrastructure.Notifications.csproj
+++ b/Zbang.Zbox.Infrastructure.Notification/Zbang.Zbox.Infrastructure.Notifications.csproj
@@ -60,6 +60,7 @@
     <Compile Include="DictionaryExtensions.cs" />
     <Compile Include="GooglePushMessage.cs" />
     <Compile Include="IPushMessage.cs" />
+    <Compile Include="JaredSendPush.cs" />
     <Compile Include="PushAction.cs" />
     <Compile Include="QueueProvider.cs" />
     <Compile Include="SendPush.cs" />
