--- a/Zbang.Cloudents.Jared/Zbang.Cloudents.Jared.csproj
+++ b/Zbang.Cloudents.Jared/Zbang.Cloudents.Jared.csproj
@@ -226,9 +226,10 @@
     <Compile Include="Controllers\UniversityController.cs" />
     <Compile Include="Controllers\UpdateTagsController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
-    <Compile Include="DataObjects\CreateAcademicCourseRequest.cs" />
-    <Compile Include="DataObjects\FollowRequest.cs" />
-    <Compile Include="DataObjects\UpdateUniversityRequest.cs" />
+    <Compile Include="Models\CreateAcademicCourseRequest.cs" />
+    <Compile Include="Models\FollowRequest.cs" />
+    <Compile Include="Models\UpdateTagsRequest.cs" />
+    <Compile Include="Models\UpdateUniversityRequest.cs" />
     <Compile Include="Filters\VersionConstraint.cs" />
     <Compile Include="Filters\VersionedRoute.cs" />
     <Compile Include="Models\AddCommentRequest.cs" />
