--- a/Zbang.Zbox.Infrastructure.Mail/Zbang.Zbox.Infrastructure.Mail.csproj
+++ b/Zbang.Zbox.Infrastructure.Mail/Zbang.Zbox.Infrastructure.Mail.csproj
@@ -35,6 +35,10 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=4.4.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.4.4.0\lib\net45\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Cobisi.EmailVerify.Net45, Version=5.9.0.0, Culture=neutral, PublicKeyToken=b863a804c9b2bdb0, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Bin\CobisiEmailVerify\Cobisi.EmailVerify.Net45.dll</HintPath>
@@ -108,7 +112,7 @@
     <Compile Include="NoUniversityMail.cs" />
     <Compile Include="NoUniversityMailParams.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegisterIoc.cs" />
+    <Compile Include="MailModule.cs" />
     <Compile Include="ReplyToCommentMail.cs" />
     <Compile Include="ReplyToCommentMailParams.cs" />
     <Compile Include="Resources\EmailResource.Designer.cs">
@@ -126,10 +130,6 @@
     <Compile Include="WelcomeMailParams.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Zbang.Zbox.Infrastructure.Ioc\Zbang.Zbox.Infrastructure.Ioc.csproj">
-      <Project>{872878fa-a84a-4cd3-856a-4ee9018819c5}</Project>
-      <Name>Zbang.Zbox.Infrastructure.Ioc</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Zbang.Zbox.Infrastructure\Zbang.Zbox.Infrastructure.csproj">
       <Project>{3e0f1fbf-60d1-40b2-b649-933142c27cb7}</Project>
       <Name>Zbang.Zbox.Infrastructure</Name>
