--- a/Zbang.Zbox.Infrastructure.Mail/packages.config
+++ b/Zbang.Zbox.Infrastructure.Mail/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.4.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
   <package id="RestSharp" version="105.2.3" targetFramework="net451" requireReinstallation="true" />
