Fixes in url in home page

--- a/Zbang.Cloudents.Mvc4WebRole/Web.config
+++ b/Zbang.Cloudents.Mvc4WebRole/Web.config
@@ -37,8 +37,8 @@
     </appender>
   </log4net>
   <connectionStrings>
-    <!--<add name="ZBox" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Zbox;Integrated Security=SSPI;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />-->
-    <add name="ZBox" connectionString="Server=tcp:on0rodxe8f.database.windows.net;Database=ZboxNew_2017-06-18T12-24Z;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;Trusted_Connection=False;Encrypt=True;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <add name="ZBox" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Zbox;Integrated Security=SSPI;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <!--<add name="ZBox" connectionString="Server=tcp:on0rodxe8f.database.windows.net;Database=ZboxNew_2017-06-18T12-24Z;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;Trusted_Connection=False;Encrypt=True;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />-->
     <!--<add name="ZBox" connectionString="Server=tcp:on0rodxe8f.database.windows.net;Database=ZBoxNew;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;Trusted_Connection=False;Encrypt=True;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <system.diagnostics>
