--- a/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
+++ b/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
@@ -367,6 +367,7 @@
     <Compile Include="Filters\NoCacheAttribute.cs" />
     <Compile Include="Filters\NoEtagAttribute.cs" />
     <Compile Include="Filters\NoUniversityAttribute.cs" />
+    <Compile Include="Filters\NoUrlLowercaseAttribute.cs" />
     <Compile Include="Filters\RemoveBoxCookieAttribute.cs" />
     <Compile Include="Filters\UniversityCookieInjectAttribute.cs" />
     <Compile Include="Filters\ValidatePasswordLengthAttribute.cs" />
