Remove ioc from worker role

--- a/Zbang.Zbox.Infrastructure/Zbang.Zbox.Infrastructure.csproj
+++ b/Zbang.Zbox.Infrastructure/Zbang.Zbox.Infrastructure.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Exceptions\PushFailedException.cs" />
     <Compile Include="Exceptions\UserRegisterFacebookException.cs" />
     <Compile Include="Extensions\AsyncLazy.cs" />
+    <Compile Include="Extensions\AutofacContainerBuilderExtenstions.cs" />
     <Compile Include="Extensions\ConfigFetcher.cs">
       <SubType>Code</SubType>
     </Compile>
