--- a/Zbang.Cloudents.Connect/packages.config
+++ b/Zbang.Cloudents.Connect/packages.config
@@ -17,7 +17,7 @@
   <package id="Microsoft.AspNet.SignalR" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.2.2" targetFramework="net462" />
-  <package id="Microsoft.AspNet.SignalR.ServiceBus" version="2.2.2" targetFramework="net462" />
+  <package id="Microsoft.AspNet.SignalR.ServiceBus3" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net45" />
