--- a/Zbang.Cloudents.Jared/packages.config
+++ b/Zbang.Cloudents.Jared/packages.config
@@ -6,7 +6,7 @@
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net462" />
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.2" targetFramework="net462" />
-  <package id="Microsoft.AspNet.SignalR.ServiceBus" version="2.2.2" targetFramework="net462" />
+  <package id="Microsoft.AspNet.SignalR.ServiceBus3" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.7.0" targetFramework="net462" />
