--- a/Zbang.Cloudents.MobileApp/packages.config
+++ b/Zbang.Cloudents.MobileApp/packages.config
@@ -19,7 +19,7 @@
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.2" targetFramework="net462" />
-  <package id="Microsoft.AspNet.SignalR.ServiceBus" version="2.2.2" targetFramework="net462" />
+  <package id="Microsoft.AspNet.SignalR.ServiceBus3" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net45" />
