--- a/Zbang.Zbox.WorkerRoleSearch/app.config
+++ b/Zbang.Zbox.WorkerRoleSearch/app.config
@@ -47,11 +47,17 @@
       </layout>
     </appender>
     <logger name="AbotLogger">
-      <level value="DEBUG" />
+      <level value="Info" />
       <appender-ref ref="aiAppender" />
     </logger>
+    <logger name="NHibernate">
+      <level value="WARN" />
+    </logger>
+    <logger name="NHibernate.SQL">
+      <level value="Info" />
+    </logger>
     <logger name="AbotXLogger">
-      <level value="DEBUG" />
+      <level value="Info" />
       <appender-ref ref="aiAppender" />
     </logger>
     <root>
